<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- Activities titles -->
    <string name="app_name">Go4Lunch</string>
    <string name="toolbar_title_login_activity">I\'m Hungry !</string>
    <!-- Google Map Auth -->
    <string name="google_maps_key" translatable="false">@string/google_api_key_gradle</string>
    <!-- Twitter Auth -->
    <string name="twitter_consumer_key" translatable="false">@string/twitter_consumer_api_key_gradle</string>
    <string name="twitter_consumer_secret" translatable="false">@string/twitter_api_key_gradle</string>
    <!-- SubTitleConnection -->
    <string name="sub_title_connection">Find a nice restaurant and invite your co-workers for lunch !</string>
    <!-- Text button -->
    <string name="google_button_txt">Sign in with Google</string>
    <string name="facebook_button_txt">Sign in with Facebook</string>
    <string name="log_out_button_txt">Log out</string>
    toolbar_title_login_activity
    <!-- Text logging -->
    <string name="connection_succeed">Connection succeed !</string>
    <string name="error_authentication_canceled">Error authentication canceled</string>
    <string name="error_no_internet">Error no internet</string>
    <string name="error_unknown_error">Error unknown error</string>
    <!-- Content description -->
    <string name="lunch_icon">lunch icon</string>
    <!-- FACEBOOK PURPOSE -->
    <string name="facebook_application_id" translatable="false">451948795345925</string>
    <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb451948795345925</string>
    <!-- Toolbar -->
    <string name="search">Search</string>
    <!-- BOTTOM NAVIGATION VIEW -->
    <string name="map_view">Map View</string>
    <string name="list_view">List View</string>
    <string name="Workmates">Workmates</string>
    <!-- Navigation Drawer -->
    <string name="avatar">avatar</string>
    <string name="your_lunch">YOUR LUNCH</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- Joining list text -->
    <string name="joining_list_txt">%1$s is joining !</string>
    <!-- Joining list text -->
    <string name="count_users">(%1$d)</string>
    <!-- Place selected by user -->
    <string name="user_place_selected">%1$s is eating at %2$s</string>
    <!-- User don't select place -->
    <string name="user_not_place_selected">%1$s hasn\'t decided yet</string>

    <!-- Blank fragment text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Background image -->
    <string name="background_image">background image</string>
    <!-- Place title -->
    <string name="place_title">Title</string>
    <!-- Separator -->
    <string name="separator">-</string>
    <!-- Place address example -->
    <string name="address">12 rue du faubourg Poissonnière</string>
    <!-- Type of place example -->
    <string name="type">French</string>
    <!-- Open date example -->
    <string name="open_date">Open until 7pm</string>
    <!-- Distance example -->
    <string name="distance">120m</string>
    <!-- Number of people who select place -->
    <string name="people_number">(3)</string>
    <!-- User information -->
    <string name="info_no_username_found">No username found</string>
    <string name="info_no_email_found">No email found</string>
    <string name="first_name_and_second_name">First name and Second Name</string>
    <string name="e_mail">E-Mail</string>
    <!-- Rating -->
    <string name="star_rating_1">star rating 1</string>
    <string name="star_rating_2">star rating 2</string>
    <string name="star_rating_3">star rating 3</string>
    <string name="star_rating_4">star rating 4</string>
    <!-- Place picture -->
    <string name="place_image">Place Image</string>
    <!-- User icon -->
    <string name="icon">icon</string>
    <!-- Title map -->
    <string name="title_activity_maps">Map</string>
    <!-- Image header -->
    <string name="image_header">image header</string>
    <string name="title">Title</string>
    <string name="address_header">Address header</string>
    <string name="call">CALL</string>
    <string name="like">LIKE</string>
    <string name="website">WEBSITE</string>
    <string name="call_icon_orange">call icon orange</string>
    <string name="website_icon_orange">website icon orange</string>
    <string name="star_icon_orange">star icon orange</string>
    <string name="image_header_list_details">Image header list details</string>
    <!-- User image -->
    <string name="user_image">user_image</string>
    <string name="user_name">User name</string>
    <string name="place_name">place name</string>
    <string name="rate_is_not_found">Rate is not found</string>
    <string name="usersJoined">you eat with : %1$s</string>
    <string name="notification_title">%1$s with %2$s</string>
    <string name="notification_message"> address : %1$s</string>
    <string name="notification_activate">Lunch notifications</string>

</resources>
