<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controller.fragments.ListView.DetailsListViewFragment">

    <ImageView
        android:id="@+id/image_header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/image_header"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/header_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:text="@string/title"
                android:textColor="@color/icon_background_color"
                android:textSize="20sp" />
            <!-- TODO : Change color of stars in rating bar like v21 -->
            <RatingBar
                android:id="@+id/rating_bar"
                style="@style/AppTheme.RatingBar.RatingBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:numStars="3"
                android:rating="2"
                android:scaleX="0.5"
                android:scaleY="0.5" />

        </LinearLayout>

        <TextView
            android:id="@+id/address_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/address_header"
            android:textColor="@color/icon_background_color" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:stretchColumns="1">

        <TableRow>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/call_icon_orange"
                android:id="@+id/call_imageview"
                android:src="@drawable/ic_call_orange_24dp"
                android:background="@android:color/transparent"/>

            <ImageView
                android:id="@+id/like_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/star_icon_orange"
                android:src="@drawable/ic_star_orange_24dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:id="@+id/web_imageview"
                android:contentDescription="@string/website_icon_orange"
                android:src="@drawable/ic_website_orange_24dp"
                android:background="@android:color/transparent"/>

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/like"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/website"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

        </TableRow>
    </TableLayout>

</LinearLayout>