<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="102dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:gravity="start"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="259dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/place_title"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/type"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/separator"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/address"
                    android:layout_marginEnd="5dp"
                    android:layout_width="196dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/address"
                    android:textSize="12sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text=""
                android:textSize="12sp"
                android:textStyle="italic" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"

                android:gravity="end"
                android:text="@string/distance"
                android:textColor="@color/grey"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="icon"
                    android:textColor="@color/grey"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/people_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/people_number"
                    android:textColor="@color/grey"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/star_rating_1"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:contentDescription="@string/star_rating_1"
                    android:gravity="end"
                    android:src="@drawable/ic_star_yellow_24dp" />

                <ImageView
                    android:id="@+id/star_rating_2"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:contentDescription="@string/star_rating_2"
                    android:gravity="end"
                    android:src="@drawable/ic_star_yellow_24dp" />

                <ImageView
                    android:id="@+id/star_rating_3"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:contentDescription="@string/star_rating_3"
                    android:gravity="end"
                    android:src="@drawable/ic_star_yellow_24dp" />

                <ImageView
                    android:id="@+id/star_rating_4"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:contentDescription="@string/star_rating_4"
                    android:gravity="end"
                    android:src="@drawable/ic_star_yellow_24dp" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/place_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="end|top"
                android:contentDescription="Place Image" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>